added locations collections
